# newLangBunBun

./: .gitignore  README.md
grammar/: SIL  SIL.md  concept.md  gan  main.bnf  main.md  new  types.md  tyu
interpreter/src/: main.rs
interpreter/src/interpreter/: interpreter.rs  token.rs
layout/: memo.md
main/src/: main.rs
main/src/tokens/: formula.rs  mod.rs  number.rs  string.rs  variable.rs
main_space/: Cargo.toml
main_space/ir_gen/: Cargo.toml
main_space/ir_gen/src/: lib.rs
main_space/lexer/src/: lib.rs
main_space/linux_codegen/: Cargo.toml
main_space/linux_codegen/src/: lib.rs  print_util.rs
main_space/main/: Cargo.toml
main_space/main/src/: main.rs
main_space/main/src/tokens/: tokens.rs
main_space/parser/: Cargo.toml
main_space/parser/src/: lib.rs
main_space/semantic/: Cargo.toml
main_space/semantic/src/: lib.rs
main_space/util_lib/: Cargo.toml
main_space/util_lib/src/: lang_type.rs  lib.rs
main_space/util_lib/src/lang_type/: char_type.rs  lang_type_base.rs
main_space/util_lib/src/lang_types/: array_type.rs  char_type.rs  lang_type_base.rs  number_type.rs  string_type.rs
main_space/windows_codegen/: Cargo.toml
main_space/windows_codegen/src/: lib.rs
nasm/: 0.nasm  0.sil  1.asm  1.nasm  1.sil  2.asm  2.nasm  2.sil  a.out  print.asm  session.md  use_print.asm
past_code/python/: endclass.py  mpar.py  node.py  nodeclass.py  oltmanode.py  play.py  test.bnf  text.txt  tl
